--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,8 @@ main {
     height: 100%;
     width: 100%;
 
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: auto auto;
 
     margin: 0;
     padding: 50px;
@@ -31,6 +31,8 @@ main {
 
     display: flex;
     flex-direction: column;
+
+    height: 90%;
 }
 
 h1 {
@@ -42,28 +44,30 @@ h1 > span {
 
 .content1 > ul {
     list-style: none;
-    padding: 0;
+    padding: 10px;
     margin: 0;
+
+    flex: 1;
 }
 #links {
     display: grid;
     grid-template-columns: auto auto;
 
-    gap: 2rem;
+    gap: 10%;
+
 }
 #links a > div {
+    height: 100%;
+
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 
     padding: 10px;
-    margin: 10px 0;
 
     background-color: #32302f;
     border-radius: 10px;
-
-    min-height: 8rem;
 
     box-shadow: 0 10px 0px 0px #1b1b1b;
 
@@ -78,21 +82,35 @@ h1 > span {
 #link li {
     text-decoration: none;
 }
-
 .content2 {
     border: 3px solid #d8a657;
     border-radius: 5px;
 
-    text-align: center;
+    align-items: center;
+    justify-content: space-between;
 
     padding: 20px;
+}
+.content2 img {
+    width: 15rem;
+    height: 15rem;
 
-    justify-content: center;
+    object-fit: cover;
+
+    position: relative;
+    top: 70px;
 }
 
+.datetime {
+    margin-top: 5rem;
+}
 #time {
     font-size: 5rem;
-    font-weight: bold;
+
+    margin: .25rem;
+}
+#date {
+    font-size: 1.5rem;
 
     margin: 0;
 }
